# openproof

./: .gitignore  .worktreeinclude  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benchmarks/: import_edges.py  import_leandojo_edges.py  run_minif2f.sh  run_minif2f_bfs.sh
benchmarks/results/: minif2f_tactic_search.txt  minif2f_tactic_search_v2.txt
benchmarks/results/20260325_063524/: summary.txt
benchmarks/results/20260325_233320/: summary.txt
benchmarks/results/20260325_234927/: summary.txt
benchmarks/results/20260326_012127/: summary.txt
benchmarks/results/20260328_143336/: summary.txt
benchmarks/results/20260331_191919/: summary.txt
benchmarks/results/20260331_194023/: summary.txt
benchmarks/results/20260331_194711/: summary.txt
benchmarks/results/bfs_20260331_195403/: summary.txt
benchmarks/results/bfs_20260331_200540/: summary.txt
benchmarks/results/bfs_20260331_201538/: summary.txt
benchmarks/results/bfs_20260331_202953/: summary.txt
benchmarks/results/bfs_20260331_203435/: summary.txt
benchmarks/results/bfs_20260331_204323/: summary.txt
benchmarks/results/bfs_20260331_213929/: summary.txt
benchmarks/results/bfs_20260331_215615/: summary.txt
benchmarks/results/bfs_20260331_220329/: summary.txt
benchmarks/results/bfs_20260331_220725/: summary.txt
benchmarks/results/bfs_20260331_221331/: summary.txt
crates/openproof-cli/: Cargo.toml
crates/openproof-cli/src/: autonomous.rs  autonomous_headless.rs  decomposition.rs  event_loop.rs  expert_gen.rs  export.rs  helpers.rs  key_handling.rs  main.rs  refusal.rs  shell.rs  slash_autonomous.rs  slash_commands.rs  slash_share_corpus.rs  system_prompt.rs  turn_handling.rs
crates/openproof-cli/src/setup/: app.rs  mod.rs  ui.rs
crates/openproof-cloud/src/: lib.rs
crates/openproof-core/: Cargo.toml
crates/openproof-core/src/: apply.rs  apply_content.rs  apply_input.rs  apply_streaming.rs  commands.rs  decomposition_checks.rs  helpers.rs  lib.rs  parser.rs  proof.rs  reports.rs  session.rs  state.rs
crates/openproof-corpus/src/: search.rs
crates/openproof-dashboard/: Cargo.toml
crates/openproof-dashboard/editor/: index.html  package-lock.json  package.json  vite.config.ts
crates/openproof-dashboard/editor/src/: EditorApp.tsx  editor-styles.css  main.tsx
crates/openproof-dashboard/src/: editor_routes.rs  lib.rs  websocket.rs
crates/openproof-dashboard/static/: app.js  index.html  styles.css
crates/openproof-lean/: Cargo.toml
crates/openproof-lean/src/: corpus_module.rs  goal_state.rs  lib.rs  lsp_mcp.rs  pantograph.rs  patch.rs  proof_tree.rs  render.rs  tools.rs  verify.rs
crates/openproof-lean/tests/: lean_check_test.rs
crates/openproof-model/: Cargo.toml
crates/openproof-model/src/: lib.rs  tools.rs
crates/openproof-protocol/src/: lib.rs
crates/openproof-search/: Cargo.toml
crates/openproof-search/src/: cache.rs  config.rs  lib.rs  mlx.rs  ollama.rs  search.rs
crates/openproof-search/tests/: minif2f_bench.rs  search_integration.rs
crates/openproof-store/src/: corpus.rs  corpus_seed.rs  corpus_sync.rs  embeddings.rs  extract.rs  lib.rs  store.rs
crates/openproof-tui/: Cargo.toml
crates/openproof-tui/src/: custom_terminal.rs  insert_history.rs  lib.rs  markdown.rs
lean/: Scratch.lean  lake-manifest.json  lakefile.toml
lean/OpenProof/: Corpus.lean  EdgeExtract.lean
scripts/: build-editor.sh
