[package]
name = "openproof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
directories.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
openproof-core = { path = "../openproof-core" }
openproof-dashboard = { path = "../openproof-dashboard" }
openproof-store = { path = "../openproof-store" }
openproof-tui = { path = "../openproof-tui" }
openproof-model = { path = "../openproof-model" }
openproof-lean = { path = "../openproof-lean" }
openproof-protocol = { path = "../openproof-protocol" }
openproof-cloud = { path = "../openproof-cloud" }
openproof-corpus = { path = "../openproof-corpus" }
