[package]
name = "openproof-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
openproof-lean = { path = "../openproof-lean" }
openproof-protocol = { path = "../openproof-protocol" }
