[package]
name = "openproof-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
unicode-width = "0.2"
openproof-core = { path = "../openproof-core" }
openproof-protocol = { path = "../openproof-protocol" }
